--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     ],
     "require": {
         "php": "^8.1",
-        "varenykyphp/cms": "^1.0"
+        "varenykyphp/cms": "dev-master"
     },
     "require-dev": {
         "laravel/pint": "^1.0"
